Got wrong resolutions table if EDID doesn't provide Detail Monitor Range table(0xfd), and intel driver works
- Kernel: mainline 6.0.0
- xserver-xorg: 1:7.7+23ubuntu2
- xserver-xorg-core: 2:21.1.3-2ubuntu2.2
- xserver-xorg-video-intel: 2:2.99.917+git20210115-1
xrandr shows invalid resolutions and switch to those listed resolutions got blank screen. This issue may result from EDID doesn't provide Detail Monitor Range table(0xfd), it only provides a fixed vrefresh(90Hz) in EDID, and X got both 0 of min_vfreq and max_vfreq.
[ 15.942028] u-Inspiron-14-5430 kernel: [drm:update_display_info.cold [drm]] Supported Monitor Refresh rate range is 0 Hz - 0 Hz
Switch to use intel driver, xrandr shows only one resolution and one framerate.
eDP1 connected primary 2560x1600+0+0 (normal left inverted right x axis y axis) 300mm x 190mm
2560x1600 90.00*+
xrandr_xserver.log xrandr_intel.log journalctl_xserver.log journalctl_intel.log edid.bin